dataServiceUri="http://localhost/vcadmin/api/mp/{0}/"/>

--- a/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/Security.config
+++ b/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/Security.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0"?>
 <Security>
-	<Connection dataServiceUri="http://vcadmin.azurewebsites.net/api/security/"/>
+	<Connection dataServiceUri="http://localhost/vcadmin/api/security/"/>
 </Security>
