--- a/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/Store.config
+++ b/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/Store.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0"?>
 <Store>
-  <Connection dataServiceUri="http://vcadmin.azurewebsites.net/api/mp/{0}/"/>
+  <Connection dataServiceUri="http://localhost/vcadmin/api/mp/{0}/"/>
   <Cache enabled="true" storeTimeout="0:0:30"></Cache>
 </Store>
