--- a/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/AppConfig.config
+++ b/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/AppConfig.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <AppConfig>
-  <Connection dataServiceUri="http://vcadmin.azurewebsites.net/api/mp/{0}/" />
+  <Connection dataServiceUri="http://localhost/vcadmin/api/mp/{0}/" />
   <Setup completed="true" adminUrl="http://assets.virtocommerce.com/software/1.12/admin/setup.exe" />
   <Cache enabled="true" settingsTimeout="00:00:30" localizationTimeout="00:00:30" seoKeywordsTimeout="00:00:30" />
   <availableModules>
