--- a/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/connectionStrings.config
+++ b/src/Presentation/FrontEnd/PublicWebApp/App_Data/Virto/Configuration/connectionStrings.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <connectionStrings>
-  <add name="VirtoCommerce" connectionString="http://vcadmin.azurewebsites.net/api/" />
+  <add name="VirtoCommerce" connectionString="http://localhost/vcadmin/api/" />
 </connectionStrings>
